--- a/_config.yml
+++ b/_config.yml
@@ -4,11 +4,24 @@ plugins:
   - jekyll-seo-tag
   - jekyll-coffeescript
 section_order:
-  - Title B
-  - Title A
+  - Community Legal Clinic Manual
+  - Clinic Management
+  - Civil Claims (General)
+  - Family Law
+  - Bankruptcy and Insolvency
+  - Criminal Law and Procedure
+  - Property
+  - Intellectual Property
+  - Wills, Intestacy, Probate and Administration
+  - Data Protection Law
+  - Advance Medical Directive
+  - Juvenile Issues
+  - Military Law
+  - Alternative Dispute Resolution
+  - The Traffic Court
 elastic_search:
-  index: templateindex
+  index: clm
   doctype: bare
-environment: LOCAL
+environment: DEV
 server_LOCAL: http://127.0.0.1:3000
-server_DEV: http://127.0.0.1:5000
+server_DEV: http://13.250.54.121:2000 
