--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 title: Community Legal Clinic Manual, Law Society of Singapore
 theme: minima
+baseurl: "/opentext-clm"
 plugins:
   - jekyll-seo-tag
   - jekyll-coffeescript
