Edited manual name, added assets

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Community Legal Clinic Manual, Law Society of Singapore
+title: Community Legal Clinics Manual, Law Society of Singapore
 theme: minima
 plugins:
   - jekyll-seo-tag
