--- a/_config.yml
+++ b/_config.yml
@@ -22,6 +22,8 @@ section_order:
 elastic_search:
   index: clm
   doctype: bare
+kramdown:
+  auto_id_stripping: true
 environment: DEV
 server_LOCAL: http://127.0.0.1:3000
 server_DEV: https://opendoc.sg 
