--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Community Legal Clinics Manual, Law Society of Singapore
-theme: minima
+remote_theme: opengovsg/opendoc-theme
 plugins:
   - jekyll-seo-tag
   - jekyll-coffeescript
@@ -27,3 +27,6 @@ kramdown:
 environment: DEV
 server_LOCAL: http://127.0.0.1:3000
 server_DEV: https://opendoc.sg 
+styling_options:
+  base_color: #bc6d75
+  logo_path: /assets/logo.png
